# agda-ffi-hs

./: .gitignore  README.md  print-libs.sh  util.agda
example/sdl2/: Main.agda  agda-ffi-hs-example-sdl2.cabal  ffi-hs-example-sdl2.agda-lib
example/sdl2-dear-imgui/: agda-ffi-hs-example-sdl2-dear-imgui.cabal  cabal.project  ffi-hs-example-sdl2-dear-imgui.agda-lib
example/sdl2-dear-imgui/src/: Main.agda
raw/JuicyPixels/: ffi-hs-JuicyPixels.agda-lib
raw/ObjectName/: ffi-hs-ObjectName.agda-lib
raw/OpenGL/: ffi-hs-OpenGL.agda-lib
raw/OpenGLRaw/: ffi-hs-OpenGLRaw.agda-lib
raw/StateVar/: ffi-hs-StateVar.agda-lib
raw/array/: ffi-hs-array.agda-lib
raw/base/: .gitignore  agda-ffi-hs-base.agda-lib  ffi-hs-base.agda-lib  malonzo.sh  util.agda
raw/binary/: ffi-hs-binary.agda-lib
raw/bytestring/: ffi-hs-bytestring.agda-lib
raw/case-insensitive/: ffi-hs-case-insensitive.agda-lib
raw/containers/: ffi-hs-containers.agda-lib
raw/dear-imgui/: ffi-hs-dear-imgui.agda-lib
raw/deepseq/: ffi-hs-deepseq.agda-lib
raw/exceptions/: ffi-hs-exceptions.agda-lib
raw/fixed/: ffi-hs-fixed.agda-lib
raw/half/: ffi-hs-half.agda-lib
raw/hashable/: ffi-hs-hashable.agda-lib
raw/http-types/: ffi-hs-http-types.agda-lib
raw/linear/: ffi-hs-linear.agda-lib
raw/primitive/: ffi-hs-primitive.agda-lib
raw/scientific/: ffi-hs-scientific.agda-lib
raw/sdl2/: ffi-hs-sdl2.agda-lib
raw/stm/: ffi-hs-stm.agda-lib
raw/text/: ffi-hs-text.agda-lib
raw/transformers/: ffi-hs-transformers.agda-lib
raw/unliftio-core/: ffi-hs-unliftio-core.agda-lib
raw/wai/: ffi-hs-wai.agda-lib
(+469 files in other folders)
